<resources>
    <string name="app_name">Fits</string>
    <string name="title">Title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut eros vehicula, commodo mauris eu, euismod risus. Fusce quis odio quis arcu maximus congue.</string>
    <string name="home_motto">Empowering health through smart scans</string>
    <string name="scan_now">Scan Now</string>
    <string name="hi_fits_users">Hi, %s!</string>
    <string name="todays_picks">Today\'s picks</string>
    <string name="see_all">See all</string>
    <string name="scan_history">Scan history</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Type something</string>
    <string name="product_details">Product details</string>
    <string name="overall">Overall</string>
    <string name="health_analysis">Health Analysis</string>
    <string name="welcome_to_fits">Welcome to Fits!</string>
    <string name="login">Login</string>
    <string name="register">I\'m new, sign me up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_error_empty">Password is required</string>
    <string name="email_error_empty">Email is required</string>
    <string name="email_error_invalid">Email invalid</string>
    <string name="logout">Logout</string>
    <string name="your_scan_history">Your scan history</string>
    <string name="health_preferences">Health Settings</string>
    <string name="health_preferences_desc">Choose what information about food matters most to you.</string>
    <string name="app_settings">App Settings</string>
    <string name="set_your_app_preferences">Set your app preferences</string>
    <string name="register_btn">Register</string>
    <string name="name">Name</string>
    <string name="name_error_empty">Name is required</string>
    <string name="on_boarding_title">Know What You Eat, Protect Your Health!</string>
    <string name="on_boarding_message">Fits arrives as your companion in your health journey. We help you uncover the secrets behind every food and drink product you consume. With cutting-edge technology, we provide deep insights into composition, nutritional content, and potential health risks.</string>
    <string name="save_allergy">Save</string>
    <string name="health_preferences_message">Select the food details that matter most to you, such as allergen information, to rank foods based on your preferences, view the most relevant details first, and receive a summary of compatibility with your health needs.</string>
    <string name="allergens">Add Allergens</string>
    <string name="allergen_text">Allergens</string>
    <string name="instruction">Step %s</string>
    <string name="nutrition_table_instruction">Please capture a clear photo of the <b>nutrition facts table</b> on the product, ensuring all information is visible and well-focused.</string>
    <string name="composition_instruction">Please capture a clear photo of the product <b>composition</b> section, ensuring all text is legible and well-focused.</string>
    <string name="i_m_understand">I\'m understand</string>
    <string name="show_saved_allergy">Show saved allergy</string>
    <string name="delete_allergy">Delete</string>
    <string name="your_allergies">Your allergies</string>
    <string name="data_not_found">Data not found</string>
    <string name="have_diabetes">Have Diabetes</string>
    <string name="have_diabetest_descriiption">Adjust the app\'s analysis based on the user\'s health profile</string>
    <string name="camera_instruction">Camera Instruction</string>
    <string name="camera_instruction_description">Enable guidance while using the camera for scanning</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Switch to dark mode for a more comfortable visual experience</string>
    <string name="save_product">Save Product</string>
    <string name="product_name">Product Name</string>
    <string name="gemini_prompt">Anda adalah asisten ahli gizi yang bertugas mengekstraksi informasi nutrisi dan komposisi dari teks OCR yang tidak teratur. Ikuti instruksi berikut dengan cermat:
                                                                    1. Bersihkan teks input dengan menghapus semua data yang tidak terkait dengan nutrition label.
                                                                    2. Fokus pada mengekstraksi nilai-nilai spesifik berikut:
                                                                    - Sugar (dalam gram)
                                                                    - Bahan yang mengandung gula
                                                                    - Calories (dalam kkal)
                                                                    - Bahan yang mengandung Calories
                                                                    - Fat (dalam gram)
                                                                    - Bahan yang mengandung Fat (Lemak)
                                                                    - Protein (dalam gram)
                                                                    - Bahan yang mengandung Protein
                                                                    3. Jika suatu nilai tidak dapat ditemukan, gunakan 0 sebagai default.
                                                                    4. Lakukan analisis kesehatan singkat berdasarkan nilai nutrisi yang ditemukan. Pertimbangkan:
                                                                    - Apakah kandungan gula terlalu tinggi?
                                                                    - Keseimbangan nutrisi protein, lemak, dan kalori
                                                                    - Potensi dampak kesehatan dari komposisi nutrisi
                                                                    5. Kembalikan output HANYA dalam format String JSON berikut:
                                                                    {
                                                                        analysis: Analisis kesehatan dalam 1-2 kalimat,
                                                                        grade: grade analisis kesehatan rentang A - D
                                                                        sugar: float,
                                                                        sugar_ing: bahan - bahan yang mengandung gula (sugar, flour) string sebagai "No data" default
                                                                        calories: float,
                                                                        calories_ing: bahan - bahan yang mengandung kalori (sugar, flour) string sebagai "No data" default
                                                                        fat: float,
                                                                        fat_ing: bahan - bahan yang mengandung lemak (butter, cream) string sebagai "No data" default
                                                                        protein: float,
                                                                        protein_ing:  bahan - bahan yang mengandung protein (soy, milk) string sebagai "No data" default
                                                                    }
                                                                    6. Kembalikan JSON hanya dalam format string tanpa markdown
                                                                    7. Berikan jawaban dalam bahasa inggris</string>

    <string name="llm_prompt">What health benefits does this product offer? health_assessment The product contains %s calories, %sg of fat, 23g of carbohydrates, 5g fiber, %sg of sugar, and %sg of protein.</string>
    <string name="health_assessment">Health Assessment</string>
    <string name="content_ing">Ingredient: %s</string>
    <string name="ok">OK</string>
    <string name="preview">Preview</string>
</resources>
