<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="18dp"
    android:background="@color/dark"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="125dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/on_boarding_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans"
        android:text="@string/on_boarding_message"
        android:textSize="14sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/login"
        android:textColor="@color/dark"
        android:textSize="16sp"
        android:paddingVertical="10dp"
        app:backgroundTint="@color/lime"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/register"
        android:textColor="@color/dark"
        android:textSize="16sp"
        android:paddingVertical="10dp"
        app:backgroundTint="@color/ash"
        android:layout_marginBottom="50dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>