<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".ui.allergy.AllergyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:translationZ="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="18dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/food_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:textSize="20sp"
            android:text="@string/allergens" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="16sp"
            android:text="@string/health_preferences_message" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_allergy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="18dp"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            tools:listitem="@layout/allergy_chip" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/save_allergy" />

    </LinearLayout>


</LinearLayout>